web/public/app/src/css/style.scss
body {
  background-color: #f5f5f5;
  font-size: 13px;
}

a:hover {
  color: #0056b3;
  text-decoration: none;
}

.header-top .inner {
  padding: 15px 0;
  color: #333;
}

.page-title a {
  color: #696969;
  font-size: 2rem;
  font-weight: 600;
}

.navbar {
  background-color: #fff;
  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.03), 1px 1px 2px 2px rgba(0, 0, 0, 0.03);
  -webkit-box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.03), 1px 1px 2px 2px rgba(0, 0, 0, 0.03);
  -moz-box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.03), 1px 1px 2px 2px rgba(0, 0, 0, 0.03);
}

.nav-link {
  padding: 0.4rem 0.8rem;
}

.nav-link span,
.nav-link i {
  display: inline-block;
  height: 100%;
  font-size: 18px;
}

.content {
  padding: 15px;
}

.no-btm-pad {
  padding-bottom: 0 !important;
}

.table td,
.table th {
  padding: 0.3rem;
}

/* table */
table.collapsible {
  border-collapse: collapse;

  th {
    background: #3498db;
    color: white;
    font-weight: bold;
  }

  td,
  th {
    text-align: left;
    font-size: 13px;
  }

  [data-toggle="toggle"] {
    display: none;
  }
}

.table.inverse tbody td {
  background-color: #f5f5f5 !important;
  border-color: #fff !important;
}

table.collapsible .labels tr td {
  background-color: #2cc16a;
  font-weight: bold;
  color: #fff;
}

.dygraph-legend {
  position: absolute;
  font-size: 13px;
  z-index: 10;
  background: white;
  line-height: normal;
  text-align: left;
  overflow: hidden;
  padding: 4px !important;
  border: 1px solid #000;
  border-radius: 5px;
  font-weight: bold;
  width: fit-content !important;
  height: fit-content !important;
}

.dygraph-rangesel-bgcanvas {
  z-index: 0 !important;
}

.dygraph-rangesel-fgcanvas {
  z-index: 0 !important;
}

.dygraph-rangesel-zoomhandle {
  height: 16px;
  width: 8px;
  z-index: 0 !important;
}

.dygraph-axis-label {
  z-index: 0 !important;
  z-index: 10;
  line-height: normal;
  overflow: hidden;
  color: black;
}

.tp-charts {
  width: 100%;
  height: 25vh;
  margin: 0 auto;
  font-size: 14px;
}

.modal {
  display: none;
  position: fixed;
  z-index: 1000;
  top: 0;
  left: 0;
  bottom: 0;
  width: 100%;
  overflow: hidden;
  background:
    rgba(214, 225, 231, 0.3)
    url('/images/loader.gif')
    50% 50%
    no-repeat;
}

.loading .modal {
  display: block;
}

.loader-v2 {
  display: none;
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  right: 0;
  align-items: center;
  justify-content: center;
  z-index: 20;
  background-color: rgba(128, 128, 128, 0.4);
}

.loader-v2::after {
  content: '';
  width: 70px;
  height: 70px;
  background-image: url('/images/loader.svg');
  background-repeat: no-repeat;
  background-size: contain;
  -webkit-animation: spin 0.8s ease-in-out infinite; /* Safari */
  animation: spin 0.8s ease-in-out infinite;
  opacity: 0.6;
}

.loader-v2.loading {
  display: flex;
}

.bal-d {
  font-weight: bolder;
  margin: 0 auto;
  text-align: center;
}

.btn_sm {
  padding: 0 0.5rem !important;
  font-size: 0.875rem !important;
  background-color: #fff !important;
  background-repeat: repeat-x;
  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.69);
  -webkit-font-smoothing: antialiased;
  border-style: solid;
  border-color: rgba(0, 0, 0, 0.5) !important;
  height: fit-content;
}

.btn {
  font-size: 13px;
}

.btn_ink {
  font-weight: 300px;
}

.btn-set {
  border-top-style: solid;
  border-width: 1px;
  border-color: #333;
  position: relative;
  padding-top: 0.6em;
  margin: 1em 0;
  font-size: 14px;
}

.btn-set > button {
  box-sizing: content-box;
  padding: 0 0.2em;
  margin: 0 0.1em;
  height: 1.5em;
  line-height: 1.5em;
  border-style: none;
  cursor: pointer;
  border-radius: 2px;
  background: transparent;
  transition: all 0.1s cubic-bezier(0.25, 0.8, 0.25, 1);
}

.btn-set > button:focus {
  outline: none;
}

.btn-set > button.btn-selected {
  background-color: white;
  border: 1px solid #aaa;
}

.btn-set > label {
  position: absolute;
  top: -0.7em;
  line-height: 1em;
  font-weight: bolder;
  background-color: inherit;
  z-index: 10;
  padding-right: 0.3em;
  font-size: 13px;
}

.btn-active,
.btn:active {
  background-color: hsl(195, 79%, 43%) !important;
  background-repeat: repeat-x;
  filter: progid:dximagetransform.microsoft.gradient(startColorstr="#56c5eb", endColorstr="#1798c4");
  background-image: -khtml-gradient(linear, left top, left bottom, from(#56c5eb), to(#1798c4));
  background-image: -moz-linear-gradient(top, #56c5eb, #1798c4);
  background-image: -ms-linear-gradient(top, #56c5eb, #1798c4);
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #56c5eb), color-stop(100%, #1798c4));
  background-image: -webkit-linear-gradient(top, #56c5eb, #1798c4);
  background-image: -o-linear-gradient(top, #56c5eb, #1798c4);
  background-image: linear-gradient(#56c5eb, #1798c4);
  color: #333 !important;
  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.33);
  -webkit-font-smoothing: antialiased;
  border-style: solid;
  border-color: rgba(0, 0, 0, 0.15) !important;
}

.btn:focus,
.btn:active {
  outline: none !important;
  box-shadow: none !important;
}

.chart-btn-display,
.block-chart-btn-display {
  display: none;
  line-height: 0.8;
}

.dygraph-legend-line {
  display: inline-block;
  position: relative;
  bottom: 0.5ex;
  padding-left: 1em;
  height: 1px;
  border-bottom-width: 2px;
  border-bottom-style: solid;
}

.dygraph-legend-dash {
  display: inline-block;
  position: relative;
  bottom: 0.5ex;
  height: 1px;
  border-bottom-width: 2px;
  border-bottom-style: solid;
}

.dygraph-roller {
  position: absolute;
  z-index: 10;
}

.dygraph-title {
  font-weight: bold;
  z-index: 10;
  text-align: center;
  font-size: 14px;
}

.dygraph-xlabel {
  text-align: center;
  color: #2970ff;
}

.market-chart-box {
  position: relative;
  min-height: 225px;
}
/* ... */

